[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/altos sprites.png" type="Texture" id=2]
[ext_resource path="res://assets/ES_Snow Ski Down Hill 1 - SFX Producer.mp3" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=11]
radius = 3.99995
height = 40.0001

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10, 14.875 )

[sub_resource type="ParticlesMaterial" id=13]
lifetime_randomness = 0.6
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
spread = 24.0
gravity = Vector3( 0, 60, 0 )
initial_velocity = 100.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 3.0
scale_random = 0.4

[node name="Player" type="RigidBody2D"]
position = Vector2( -9, -61 )
continuous_cd = 1
contacts_reported = 2
contact_monitor = true
can_sleep = false
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -7 )
scale = Vector2( 0.469231, 0.469231 )
texture = ExtResource( 2 )

[node name="BoardBody" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
rotation = 1.5708
shape = SubResource( 11 )

[node name="PlayerBody" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7.125 )
shape = SubResource( 12 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 200, 50 )
current = true

[node name="SlideSnowAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="SnowTail" type="Particles2D" parent="."]
visible = false
position = Vector2( -15, 10 )
rotation = 0.425777
amount = 40
process_material = SubResource( 13 )

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Player_body_exited"]
